--- a/backend-vast-api/package.json
+++ b/backend-vast-api/package.json
@@ -9,10 +9,11 @@
     "start:dev": "nest start --watch"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/config": "^2.2.0",
+    "@nestjs/common": "^9.4.3",
+    "@nestjs/core": "^9.4.3",
+    "@nestjs/platform-express": "^9.4.3",
+    "@nestjs/config": "^2.3.4",
+    "@nestjs/typeorm": "^9.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "xmlbuilder2": "^3.0.0",
@@ -20,9 +21,9 @@
     "pg": "^8.8.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/cli": "^9.5.0",
+    "@nestjs/schematics": "^9.2.0",
+    "@nestjs/testing": "^9.4.3",
     "typescript": "^4.7.4"
   }
 }
